patch launch polish #1

--- a/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
@@ -35,20 +35,81 @@
 	civic_tec_machine_planet_harvesters_desc:0 "TO DO"
 	civic_tec_machine_planet_harvesters_tooltip:0 "Allows the creation of Harvester Colony ships, which are more costly and slower, but carry extra initial pops and provide instantaneous access to some districts and buildings.\nAllows the construction of Automated Planetary Harvesters micro-megastructures over habitable non artificial planets.\nPlanets colonized by harvester colony ships, via decision when obtained by other means, or slowly with automated harvesters, will be Harvested, obtaining incredible bonuses to production, immigration and planetary build speed, but will be exhausted over time to the point of needing a total climate restoration.\nThe capital of this empire will receive extra deposits when a harvested planet gains a level of exhaustion."
 
-	# Priest produce extra research
-	civic_tec_erudite_priests:0 "Erudite Piety"
-	civic_tec_erudite_priests_desc:0 "TO DO"
-	civic_tec_erudite_priests_tooltip:0 "TO DO"
+# --------------- Unity jobs produce extra research
+	civic_tec_regular_erudite_priests:0 "Erudite Piety"
+	civic_tec_regular_erudite_priests_desc:0 "TO DO"
+	civic_tec_regular_erudite_priests_tooltip:0 "TO DO"
 
-	civic_tec_erudite_priests:0 "Erudite Piety"
-	civic_tec_erudite_priests_desc:0 "TO DO"
-	civic_tec_erudite_priests_tooltip:0 "TO DO"
+	civic_tec_regular_erudite_bureaucrats:0 "Inventive Administration"
+	civic_tec_regular_erudite_bureaucrats_desc:0 "TO DO"
+	civic_tec_regular_erudite_bureaucrats_tooltip:0 "TO DO"
 
-	# Priest produce extra research
-	civic_tec_erudite_piety:0 "Erudite Piety"
-	civic_tec_erudite_piety_desc:0 "TO DO"
-	civic_tec_erudite_piety_tooltip:0 "TO DO"
+	civic_tec_corporate_erudite_priests:0 "Erudite Piety"
+	civic_tec_corporate_erudite_priests_desc:0 "TO DO"
+	civic_tec_corporate_erudite_priests_tooltip:0 "TO DO"
 
+	civic_tec_corporate_erudite_bureaucrats:0 "Inventive Administration"
+	civic_tec_corporate_erudite_bureaucrats_desc:0 "TO DO"
+	civic_tec_corporate_erudite_bureaucrats_tooltip:0 "TO DO"
+
+	civic_tec_hive_overloaded_transmitters:0 "Development Transmitters"
+	civic_tec_hive_overloaded_transmitters_desc:0 "TO DO"
+	civic_tec_hive_overloaded_transmitters_tooltip:0 "TO DO"
+
+# --------------- Research jobs produce extra unity
+	civic_tec_corporate_techno_investor:0 "Investing"
+	civic_tec_corporate_techno_investor_desc:0 "TO DO"
+	civic_tec_corporate_techno_investor_tooltip:0 "TO DO"
+
+
+# /
+# --------------- Tall - capital provide district %, low size planets get extra district slots
+	civic_tec_regular_district_optimizers:0 "Urban Optimizers"
+	civic_tec_regular_district_optimizers_desc:0 "TO DO"
+	civic_tec_regular_district_optimizers_tooltip:0 "TO DO"
+
+	civic_tec_corporate_district_optimizers:0 "$civic_tec_regular_district_optimizers$"
+	civic_tec_corporate_district_optimizers_desc:0 "TO DO"
+	civic_tec_corporate_district_optimizers_tooltip:0 "$civic_tec_regular_district_optimizers_tooltip$"
+
+	civic_tec_hive_district_optimizers:0 "Nest Optimizers"
+	civic_tec_hive_district_optimizers_desc:0 "TO DO"
+	civic_tec_hive_district_optimizers_tooltip:0 "TO DO"
+
+	civic_tec_machine_district_optimizers:0 "Spatial Optimizers"
+	civic_tec_machine_district_optimizers_desc:0 "TO DO"
+	civic_tec_machine_district_optimizers_tooltip:0 "TO DO"
+# /
+# --------------- Menial
+	civic_tec_regular_technician_guilds:0 "Energy Guilds"
+	civic_tec_regular_technician_guilds_desc:0 "TO DO"
+	civic_tec_regular_technician_guilds_tooltip:0 "TO DO"
+
+	civic_tec_regular_farmer_guilds:0 "Bio-Farming Guilds"
+	civic_tec_regular_farmer_guilds_desc:0 "TO DO"
+	civic_tec_regular_farmer_guilds_tooltip:0 "TO DO"
+
+	civic_tec_corporate_mining_guilds:0 "Mining Corps"
+	civic_tec_corporate_mining_guilds_desc:0 "TO DO"
+	civic_tec_corporate_mining_guilds_tooltip:0 "TO DO"
+
+	civic_tec_corporate_technician_guilds:0 "Energy Corps"
+	civic_tec_corporate_technician_guilds_desc:0 "TO DO"
+	civic_tec_corporate_technician_guilds_tooltip:0 "TO DO"
+
+	civic_tec_corporate_farmer_guilds:0 "Bio-Farming Corps"
+	civic_tec_corporate_farmer_guilds_desc:0 "TO DO"
+	civic_tec_corporate_farmer_guilds_tooltip:0 "TO DO"
+
+	# no idea = energy
+	# lithopheric harmony = minerals
+	# biospheric harmony = food
+
+	# conductive relays = energy
+	# rockbreakers = minerals
+	civic_tec_machine_food_harvesters:0 "Biosphere Harvesters"
+	civic_tec_machine_food_harvesters_desc:0 "TO DO"
+	civic_tec_machine_food_harvesters_tooltip:0 "TO DO"
 # /
 
 
@@ -95,3 +156,86 @@
 	precursor_loc_00X_desc:0 ""
 
 # /
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# Annotations
+#	Cult of personality
+#	> 
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
+#	
