final r5b remaining changes

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -1142,12 +1142,12 @@
 	#Stability and output
 	civic_tec_machine_prime_directive:0 "Prime Directive"
 	civic_tec_machine_prime_directive_desc:0 "It is mandatory to ensure the semi-autonomous planetary drones work at the maximum efficiency, cared and maintained with the gestalt consciousness state of the art technologies and with an unmatched programation for serving its."
-	civic_tec_machine_prime_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide §G2§! additional £stability£ §YStability§! and increase £job£ §YDrone Output§! by §G1.5%§! per $tec_loc_capital_tier$.\n£job_maintenance_drone£ §YMaintenance Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tec_machine_prime_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide §G2§! additional £stability£ §YStability§! and increase £job£ §YDrone Output§! by §G1.5%§! per $tec_loc_capital_tier$ with an extra added £energy£ §YEnergy§! upkeep.\n£job_maintenance_drone£ §YMaintenance Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 
 	# Unity
 	civic_tec_machine_alpha_directive:0 "Alpha Directive"
 	civic_tec_machine_alpha_directive_desc:0 "A cohesive collective will thrive, one that doesn't follow its proper commands and work at unity will only be prone to disarray and lack of performance."
-	civic_tec_machine_alpha_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £unity£ §YUnity§!, and amplify the planet output of £unity£ §YUnity§! by §G2.5%§!, per $tec_loc_capital_tier$\n£unity£ §YUnity Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tec_machine_alpha_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £unity£ §YUnity§! with an extra added £energy£ §YEnergy§! upkeep, and amplify the planet output of £unity£ §YUnity§! by §G2.5%§!, per $tec_loc_capital_tier$\n£unity£ §YUnity Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 	# \n\n§HTranscendental Ascent§!: The extra £unity£ §YUnity§! output is applied instead to £job_priest£ §YAscendant§! drones.\n
 
 	# Decryption
@@ -1158,7 +1158,7 @@
 	# Production
 	civic_tec_machine_epsilon_directive:0 "Epsilon Directive"
 	civic_tec_machine_epsilon_directive_desc:0 "Industrial tasks are a priority, a main control focus whose the higher assigned drones must oversee and control for a more efficient development of colonies and the empire as a whole."
-	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§!, and amplify the planet output of £alloys£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n£job_fabricator£ $job_fabricator_plural$ provide §G+0.25%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings.§!"
+	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§! with an extra added £energy£ §YEnergy§! upkeep, and amplify the planet output of £alloys£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n£job_fabricator£ $job_fabricator_plural$ provide §G+0.25%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings.§!"
 
 	# Decryption
 	civic_tec_machine_zeta_directive:0 "Zeta Directive"
@@ -1173,7 +1173,7 @@
 	# Research
 	civic_tec_machine_lambda_directive:0 "Lambda Directive"
 	civic_tec_machine_lambda_directive_desc:0 "Iterative processes of discovery, catalogation, trial and error must be properly organised, controlled and sorted by semi autonomous entities to ensure less sophisticated drones continue with a proper stable development."
-	civic_tec_machine_lambda_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £trigger_tec_research£ §YResearch§!, and amplify the planet output of §Y$tec_loc_research_resources$§! by §G2.5%§!, per $tec_loc_capital_tier$\n£trigger_tec_research£ §YResearch Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tec_machine_lambda_directive_effects:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £trigger_tec_research£ §YResearch§! with an extra added £energy£ §YEnergy§! upkeep, and amplify the planet output of §Y$tec_loc_research_resources$§! by §G2.5%§!, per $tec_loc_capital_tier$\n£trigger_tec_research£ §YResearch Drones§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 	#\n\n§HInput Iterators§!: The extra job §Y$tec_loc_research_resources$§! output is added to the rate of §YIteration§! instead, at a local scale.
 
 	# ?
