--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
-	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R5 HOTFIX II (§Y24-03-2023§!)"
+	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R5B (§Y19-04-2023§!)"
 	TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
 	TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
 	TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
@@ -59,6 +59,7 @@
 	tec_loc_robot_assembly_add: "£job_roboticist£ Robot Assembly"
 	tec_loc_robot_assembly_mult: "£job_roboticist£ Robot Assembly Mult"
 	tec_loc_biological_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$"
+	tec_loc_biological_assembly_mult_per_pop: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ Mult per pop"
 	tec_loc_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
 	tec_loc_cybernetic_assembly_mult: "£mod_planet_pop_assembly_mult£ Cybernetic Assembly Mult"
 
