--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -833,14 +833,15 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_universal_desc:0 "§LConstant actuators and a resilient genetic and programming code allows a really effective reproductive rate, either being natural, forced cloning or enhanced development.§!"
  mod_trait_tec_replicant_universal_tooltip:0 "[trait_tec_replicant_universal_block]"
  trait_tec_replicant_universal_effect_standard:0 "$tec_loc_pop_growth$: §G+20%§!\n$tec_loc_biological_assembly$: §G+20%§!"
- trait_tec_replicant_universal_effect_upgraded:0 "§EUpgraded Trait§!\n$tec_loc_biological_assembly$: §G+40%§!"
+ trait_tec_replicant_universal_effect_upgraded:0 "§EUpgraded Trait§!\n$tec_loc_biological_assembly_mult_per_pop$: §G0.25%§!"
+	# 10 pops = 2.5%, 100 pops = 25%, 200 pops = 50%
 
 	# Budding
  trait_tec_replicant_budding:0 "Enhanced Bioprinting"
  trait_tec_replicant_budding_desc:0 "§LSeveral nanocomposites and biomechanical adaptations allow a flexible method of reproduction by direct pseudo-replication of the original template of this species.§!"
  mod_trait_tec_replicant_budding_tooltip:0 "[trait_tec_replicant_budding_block]" 
- trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.025§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
- trait_tec_replicant_budding_effect_upgraded:0 "§EUpgraded Trait§!\nEach replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.02§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ trait_tec_replicant_budding_effect_upgraded:0 "§EUpgraded Trait§!\nEach replicant pop working as a slave or better produces §G0.04§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
 	# +10% basic and industrial resources
  trait_tec_replicant_capacitor:0 "Nano-Capacitors"
