slight changes for r6

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -730,67 +730,80 @@
 # /
 
 # ------------------------------------------------- Civics
+# --------------- Regular civic changes
+
+
+# --------------- Corporate civic changes
+
+
+# --------------- Hive civic changes
+
+
+# --------------- Machine civic changes
+
+
+
 # --------------- Cult civics
 	# Note: Planets are in constant internal war to get "the best" out of their civ, causing some devastation/etc, each x time capital/capital of each sector gets a buff based on the winning faction and after 10 years you get a whole winner overall giving an empire buff
-	civic_tec_war_cult:0 "Forged In Conflict"
-	civic_tec_war_cult_desc:0 "TO DO"
-	civic_tec_war_cult_tooltip:0 "TO DO"
+	civic_tec_regular_war_cult:0 "Forged In Conflict"
+	civic_tec_regular_war_cult_desc:0 "TO DO"
+	civic_tec_regular_war_cult_tooltip:0 "TO DO"
 
-	civic_tec_spiritualist_eras:0 "Eras of Contemplation"
-	civic_tec_spiritualist_eras_desc:0 "This empire reinforces its faith with the unrelenting pass of time as a way of manifesting the divine, dedicating entire generations to a different cycle of the same pure creed."
-	civic_tec_spiritualist_eras_tooltip:0 "This empire, depending on its governing ethics, will periodically change between different cycling ''Eras'' of cult, gaining diverse bonuses and penalties:\n\n- §HEra of Wills:§! (to do).\n- §HEra of Demise:§! (to do).\n- §HEra of Grief:§! (to do).\n- §HEra of Cultivation:§! (to do).\n\n"
+	civic_tec_regular_eras_of_contemplation:0 "Eras of Contemplation"
+	civic_tec_regular_eras_of_contemplation_desc:0 "This empire reinforces its faith with the unrelenting pass of time as a way of manifesting the divine, dedicating entire generations to a different cycle of the same pure creed."
+	civic_tec_regular_eras_of_contemplation_tooltip:0 "This empire, depending on its governing ethics, will periodically change between different cycling ''Eras'' of cult, gaining diverse bonuses and penalties:\n\n- §HEra of Wills:§! (to do).\n- §HEra of Demise:§! (to do).\n- §HEra of Grief:§! (to do).\n- §HEra of Cultivation:§! (to do).\n\n"
 
-	civic_tec_paperwork_cult:0 "Bureaucratic Monasticism"
-	civic_tec_paperwork_cult_desc:0 "Paperwork, signatures, taxes, requests... all are manifestations of the divine for this society, with bureaucracy and faith mutually ingrained together; any petition or prayer must be properly corresponded with a signed in triplicate instance."
-	civic_tec_paperwork_cult_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_high_paperwork_priest£ §Y$job_tec_high_paperwork_priest$§!.\n- $job_tec_high_paperwork_priest_effect_desc$\n£building£ Temples and Administrative Offices are replaced by £building£ §YBureaucratic Monasteries§!, providing £job_tec_paperwork_priest£ §Y$job_tec_paperwork_priest_plural$§!.\n$job_tec_paperwork_priest_effect_desc$\n"
+	civic_tec_regular_paperwork_cult:0 "Bureaucratic Monasticism"
+	civic_tec_regular_paperwork_cult_desc:0 "Paperwork, signatures, taxes, requests... all are manifestations of the divine for this society, with bureaucracy and faith mutually ingrained together; any petition or prayer must be properly corresponded with a signed in triplicate instance."
+	civic_tec_regular_paperwork_cult_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_high_paperwork_priest£ §Y$job_tec_high_paperwork_priest$§!.\n- $job_tec_high_paperwork_priest_effect_desc$\n£building£ Temples and Administrative Offices are replaced by £building£ §YBureaucratic Monasteries§!, providing £job_tec_paperwork_priest£ §Y$job_tec_paperwork_priest_plural$§!.\n$job_tec_paperwork_priest_effect_desc$\n"
 
-	civic_tec_corporate_paperwork_cult:0 "$civic_tec_paperwork_cult$"
-	civic_tec_corporate_paperwork_cult_desc:0 "$civic_tec_paperwork_cult_desc$"
+	civic_tec_corporate_paperwork_cult:0 "$civic_tec_regular_paperwork_cult$"
+	civic_tec_corporate_paperwork_cult_desc:0 "$civic_tec_regular_paperwork_cult_desc$"
 	civic_tec_corporate_paperwork_cult_tooltip:0 "TO DO"
 
-	civic_tec_starseeker_cult:0 "TO DO"
-	civic_tec_starseeker_cult_desc:0 "TO DO"
-	civic_tec_starseeker_cult_tooltip:0 "TO DO"
+	civic_tec_regular_starseeker_cult:0 "TO DO"
+	civic_tec_regular_starseeker_cult_desc:0 "TO DO"
+	civic_tec_regular_starseeker_cult_tooltip:0 "TO DO"
 
 	civic_tec_corporate_starseeker_cult:0 "TO DO"
 	civic_tec_corporate_starseeker_cult_desc:0 "TO DO"
 	civic_tec_corporate_starseeker_cult_tooltip:0 "TO DO"
 
-	civic_tec_atom_cult:0 "Atomic Brotherhood"
-	civic_tec_atom_cult_desc:0 "TO DO"
-	civic_tec_atom_cult_tooltip:0 "TO DO"
+	civic_tec_regular_atom_cult:0 "Atomic Brotherhood"
+	civic_tec_regular_atom_cult_desc:0 "TO DO"
+	civic_tec_regular_atom_cult_tooltip:0 "TO DO"
 
 	civic_tec_corporate_atom_cult:0 "TO DO"
 	civic_tec_corporate_atom_cult_desc:0 "TO DO"
 	civic_tec_corporate_atom_cult_tooltip:0 "TO DO"
 
-	civic_tec_cycle_cult:0 "TO DO"
-	civic_tec_cycle_cult_desc:0 "TO DO"
-	civic_tec_cycle_cult_tooltip:0 "TO DO"
+	civic_tec_regular_cycle_cult:0 "TO DO"
+	civic_tec_regular_cycle_cult_desc:0 "TO DO"
+	civic_tec_regular_cycle_cult_tooltip:0 "TO DO"
 
 	civic_tec_corporate_cycle_cult:0 "TO DO"
 	civic_tec_corporate_cycle_cult_desc:0 "TO DO"
 	civic_tec_corporate_cycle_cult_tooltip:0 "TO DO"
 
-	civic_tec_wealth_cult:0 "TO DO"
-	civic_tec_wealth_cult_desc:0 "TO DO"
-	civic_tec_wealth_cult_tooltip:0 "TO DO"
+	civic_tec_regular_wealth_cult:0 "TO DO"
+	civic_tec_regular_wealth_cult_desc:0 "TO DO"
+	civic_tec_regular_wealth_cult_tooltip:0 "TO DO"
 
 	civic_tec_corporate_wealth_cult:0 "TO DO"
 	civic_tec_corporate_wealth_cult_desc:0 "TO DO"
 	civic_tec_corporate_wealth_cult_tooltip:0 "TO DO"
 
-	civic_tec_paranormal_cult:0 "TO DO"
-	civic_tec_paranormal_cult_desc:0 "TO DO"
-	civic_tec_paranormal_cult_tooltip:0 "TO DO"
+	civic_tec_regular_paranormal_cult:0 "TO DO"
+	civic_tec_regular_paranormal_cult_desc:0 "TO DO"
+	civic_tec_regular_paranormal_cult_tooltip:0 "TO DO"
 
 	civic_tec_corporate_paranormal_cult:0 "TO DO"
 	civic_tec_corporate_paranormal_cult_desc:0 "TO DO"
 	civic_tec_corporate_paranormal_cult_tooltip:0 "TO DO"
 
-	civic_tec_butlerian_cult:0 "Mentat Order"
-	civic_tec_butlerian_cult_desc:0 "An early exposure to the dangers of excessive automation and potential synthetic uprising caused this society to ban the use of Artificial Intelligences and Synthetic Sapient technologies. As a byproduct of it, the need of administrative and research development was relegated to highly intelligent and minute living computers, with immense mathematical, logical, cognitive and ''supralogical'' skills, selected and trained even before birth."
-	civic_tec_butlerian_cult_tooltip:0 "£building£ Administrative and Research Buildings are replaced by £building£ §YMentat Emplacements§!, providing £job_tec_mentat£ §Y$job_tec_mentat_plural$§!.\n$job_tec_mentat_effect_desc_regular$\n§RRobotic, Synthetic and AI features are BANNED for this empire§!\n"
+	civic_tec_regular_butlerian_cult:0 "Mentat Order"
+	civic_tec_regular_butlerian_cult_desc:0 "An early exposure to the dangers of excessive automation and potential synthetic uprising caused this society to ban the use of Artificial Intelligences and Synthetic Sapient technologies. As a byproduct of it, the need of administrative and research development was relegated to highly intelligent and minute living computers, with immense mathematical, logical, cognitive and ''supralogical'' skills, selected and trained even before birth."
+	civic_tec_regular_butlerian_cult_tooltip:0 "£building£ Administrative and Research Buildings are replaced by £building£ §YMentat Emplacements§!, providing £job_tec_mentat£ §Y$job_tec_mentat_plural$§!.\n$job_tec_mentat_effect_desc_regular$\n§RRobotic, Synthetic and AI features are BANNED for this empire§!\n"
 
 	civic_tec_corporate_butlerian_cult:0 "Mentat Firm"
 	civic_tec_corporate_butlerian_cult_desc:0 "An early exposition to the dangers of excessive automation and potential synthetic uprising caused this megacorporation to ban the use of Artificial Intelligences and Synthetic Sapient technologies. As a byproduct of it, the need of trading, administrative and research development was relegated to highly intelligent and minute living computers, with immense mathematical, logical, cognitive and ''supralogical'' skills, selected and trained even before birth."
@@ -807,21 +820,21 @@
 	civic_tec_corporate_starseekers:0 "TO DO"
 	civic_tec_corporate_starseekers_desc:0 "TO DO"
 
-	civic_tec_psi_researchers:0 "TO DO"
-	civic_tec_psi_researchers_desc:0 "TO DO"
+	civic_tec_regular_psi_researchers:0 "TO DO"
+	civic_tec_regular_psi_researchers_desc:0 "TO DO"
 	# Note: Focus on physics
 	civic_tec_corporate_psi_researchers:0 "TO DO"
 	civic_tec_corporate_psi_researchers_desc:0 "TO DO"
 
-	civic_tec_bio_researchers:0 "TO DO"
-	civic_tec_bio_researchers_desc:0 "TO DO"
+	civic_tec_regular_bio_researchers:0 "TO DO"
+	civic_tec_regular_bio_researchers_desc:0 "TO DO"
 
 	# Note: Focus on bio
 	civic_tec_corporate_bio_researchers:0 "TO DO"
 	civic_tec_corporate_bio_researchers_desc:0 "TO DO"
 
-	civic_tec_mecha_researchers:0 "TO DO"
-	civic_tec_mecha_researchers_desc:0 "TO DO"
+	civic_tec_regular_mecha_researchers:0 "TO DO"
+	civic_tec_regular_mecha_researchers_desc:0 "TO DO"
 
 	# Note: Focus on engineering
 	civic_tec_corporate_mecha_researchers:0 "TO DO"
@@ -833,15 +846,15 @@
 	civic_tec_corporate_astrologers:0 "TO DO"
 	civic_tec_corporate_astrologers_desc:0 "TO DO"
 
-	civic_tec_singularity_researchers:0 "TO DO"
-	civic_tec_singularity_researchers_desc:0 "TO DO"
+	civic_tec_regular_singularity_researchers:0 "TO DO"
+	civic_tec_regular_singularity_researchers_desc:0 "TO DO"
 
 	# Note: Automated research
 	civic_tec_corporate_singularity_researchers:0 "TO DO"
 	civic_tec_corporate_singularity_researchers_desc:0 "TO DO"
 
-	civic_tec_eldritch_researchers:0 "TO DO"
-	civic_tec_eldritch_researchers_desc:0 "TO DO"
+	civic_tec_regular_eldritch_researchers:0 "TO DO"
+	civic_tec_regular_eldritch_researchers_desc:0 "TO DO"
 
 	# Note: can perform eldritch experiments each 10 years
 	civic_tec_corporate_eldritch_researchers:0 "TO DO"
@@ -1370,3 +1383,39 @@
  # /
 # /
 
+
+
+# ------------------------------------------------- Auth mechanics dump
+
+	situation_tec_auth_imperial_basic:0 "Imperial Loyalty"
+	situation_tec_auth_imperial_basic_type:0 "$situation_tec_auth_imperial_basic$"
+	situation_tec_auth_imperial_basic_desc:0 "The [Target.Owner.GetName] has achieved its peak in the design of functional Enhancements, that will change our species and our way of develop as a whole, completely.\n\nWith more effort and investment, we will apply all these implants to our kind, making the next step in our glorious evolution a total revolution."
+	situation_tec_auth_imperial_basic_fail_tooltip:0 "The empire will start to suffer outbursts of dissidence and rebelry if it shows weakness and lack of loyal followers."
+	situation_tec_auth_imperial_basic_finish_tooltip:0 "An empire with a solid foundation of loyal members will thrive and prosper."
+	situation_tec_auth_imperial_basic_monthly_change_tooltip:0 "The progress of this §YSituation§! depend on the loyalty deposited by our houses and colonies."
+	# -5/0%
+	situation_tec_auth_imperial_basic_stage_1:0 "I"
+	# 0-10%
+	situation_tec_auth_imperial_basic_stage_2:0 "II"
+	# 10-25%
+	situation_tec_auth_imperial_basic_stage_3:0 "Low Loyalty"
+	# 25-40%
+	situation_tec_auth_imperial_basic_stage_4:0 "IV"
+	# 40-60%
+	situation_tec_auth_imperial_basic_stage_4:0 "IV"
+	# 60-75%
+	situation_tec_auth_imperial_basic_stage_4:0 "High Loyalty"
+	# 75-90%
+	situation_tec_auth_imperial_basic_stage_4:0 "High Loyalty"
+	# 90-100%
+	situation_tec_auth_imperial_basic_stage_4:0 "Total Loyalty"
+	# 100-105%
+	situation_tec_auth_imperial_basic_stage_4:0 "Absolute Loyalty"
+
+	situation_approach_tec_auth_imperial_basic_slow:0 "In-depth Study"
+	situation_approach_tec_auth_imperial_basic_slow_tooltip:0 "Each single minuscule factor of our revolution needs to be addressed and studied with the necessary time."
+	situation_approach_tec_auth_imperial_basic_fast:0 "Hazardous Study"
+	situation_approach_tec_auth_imperial_basic_fast_tooltip:0 "We must do anything necessary to accelerate or force our cybernetic r-evolution, no matter the cost."
+
+	situation_string_tec_auth_imperial_basic_fast:0 "$situation_approach_tec_auth_imperial_basic_fast$"
+	situation_string_tec_auth_imperial_basic_slow:0 "$situation_approach_tec_auth_imperial_basic_slow$"
