--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -557,8 +557,8 @@
  civic_tooltip_tec_cyberutopia_effects:0 "a"
 
 # Cyberpunk 2277 - Megacity empire NOT READY		- MEGACITY PLAYSTYLE
- civic_tec_megacities:0 "Megalopolis Urbanites" 
- civic_tec_megacities_desc:0 "Traditionally this civilization has seek refuge and work on scarce, remote and isolated Megacities, where entire generations thrive and disappear, the upper classes touch the highest ground and the lower classes maintain the darker and deep parts of the bottom of this living, and ruthless, kind of cities."
+ civic_tec_regular_megacities:0 "Megalopolis Urbanites" 
+ civic_tec_regular_megacities_desc:0 "Traditionally this civilization has seek refuge and work on scarce, remote and isolated Megacities, where entire generations thrive and disappear, the upper classes touch the highest ground and the lower classes maintain the darker and deep parts of the bottom of this living, and ruthless, kind of cities."
  civic_tooltip_tec_megacities_effects:0 "Allows the construction and customization of up to 5 Megacities per habitable regular planet, special buildings that provide housing, amenities, trade value and resources based on how they are specialized and upgraded.\n\n.This empire can't construct city districts on habitable planets; instead, each Megacity upgrade level will provide 1 planetary build slot.\n\n"
 # Ecumenopolis decision requires 5 megapolis constructed
 
